--- a/dizhi/index.html
+++ b/dizhi/index.html
@@ -24,43 +24,43 @@
 <p>回家地址 1.2 → <a target="_blank" href="https://HuiJiaDiZhi.xyz">https://HuiJiaDiZhi.xyz</a> <span speed="https://HuiJiaDiZhi.xyz">测速中</span></p>
 <p>回家地址 1.3 → <a target="_blank" href="https://HuiJiaDiZhi.top">https://HuiJiaDiZhi.top</a> <span speed="https://HuiJiaDiZhi.top">测速中</span></p>
 <hr />
-<p>回家地址 2.1 → <a target="_blank" href="https://xindizhi.github.io/dizhi/">https://xindizhi.github.io/dizhi/</a> <span speed="https://xindizhi.github.io/dizhi/">测速中</span></p>
+<p>回家地址 2.1 → <a target="_blank" href="https://zuixindizhi007.github.io/dizhi/">https://zuixindizhi007.github.io/dizhi/</a> <span speed="https://zuixindizhi007.github.io/dizhi/">测速中</span></p>
 <p>回家地址 2.2 → <a target="_blank" href="https://huijiadizhi.bitbucket.io/">https://huijiadizhi.bitbucket.io/</a> <span speed="https://huijiadizhi.bitbucket.io/">测速中</span></p>
 <p>回家地址 2.3 → <a target="_blank" href="https://www.ebay.com/usr/huijiadizhi">https://www.ebay.com/usr/huijiadizhi</a> <span speed="https://www.ebay.com/usr/huijiadizhi">测速中</span></p>
 <hr />
 <div id="dizhi">
 <p><a target="_blank" href="https://at.umtrack.com/K5nObC?cid=4831"><img src="huijiadizhi.png" /></a></p>
 <p><a href="#dizhi">成人精品APP最新地址</a></p>
-<p>免费成人APP → <a target="_blank" href="https://asd.dizhi42.top/">https://asd.dizhi42.top/</a> <span speed="https://asd.dizhi42.top/">测速中</span></p>
-<p>免费成人APP → <a target="_blank" href="https://asd.dizhi41.top/">https://asd.dizhi41.top/</a> <span speed="https://asd.dizhi41.top/">测速中</span></p>
-<p>免费成人APP → <a target="_blank" href="https://asd.dizhi36.xyz/">https://asd.dizhi36.xyz/</a> <span speed="https://asd.dizhi36.xyz/">测速中</span></p>
-<p>免费成人APP → <a target="_blank" href="https://asd.dizhi35.xyz/">https://asd.dizhi35.xyz/</a> <span speed="https://asd.dizhi35.xyz/">测速中</span></p>
 <p>主站 (国内访问无法访问) → <a target="_blank" href="https://app.CAVhot.com">https://app.CAVhot.com</a> <span speed="app.CAVhot.com">测速中</span></p>
+<p>免费成人APP → <a target="_blank" href="https://asd.dizhi45.top/">https://asd.dizhi45.top/</a> <span speed="https://asd.dizhi45.top/">测速中</span></p>
+<p>免费成人APP → <a target="_blank" href="https://asd.dizhi44.top/">https://asd.dizhi44.top/</a> <span speed="https://asd.dizhi44.top/">测速中</span></p>
 </div>
 
 <hr />
 <div id="zhiyin">
-<p><a target="_blank" href="https://zhiyindizhi.com/?huijiadizhi.com"><img src="zhiyinlogo.png" /></a></p>
+<p><a target="_blank" href="https://at.umtrack.com/KrSrem?cid=483"><img src="zhiyinlogo.png" /></a></p>
 <p><a href="#zhiyin">知阴最新地址</a></p>
 <p>知阴.com → <a target="_blank" href="https://xn--k7yo06d.com/?huijiadizhi.com">https://知阴.com</a> <span speed="https://xn--k7yo06d.com/?huijiadizhi.com">测速中</span></p>
 <p>知阴地址 → <a target="_blank" href="https://zydizhi.com/?huijiadizhi.com">https://zydizhi.com</a> <span speed="https://zydizhi.com/">测速中</span></p>
-<p>地址 1 → <a target="_blank" href="https://zhiyindizhi1.top">https://zhiyindizhi1.top</a> <span speed="https://zhiyindizhi1.top/">测速中</span></p>
-<p>地址 2 → <a target="_blank" href="https://zhiyindizhi2.top/">https://zhiyindizhi2.top</a> <span speed="https://zhiyindizhi2.top/">测速中</span></p>
-<p>地址 3 → <a target="_blank" href="https://zhiyindizhi3.top/">https://zhiyindizhi3.top</a> <span speed="https://zhiyindizhi3.top/">测速中</span></p>
-<p>地址 4 → <a target="_blank" href="https://zhiyindizhi4.top/">https://zhiyindizhi4.top</a> <span speed="https://zhiyindizhi4.top/">测速中</span></p>
-<p>地址 5 → <a target="_blank" href="https://zhiyindizhi5.top/">https://zhiyindizhi5.top</a> <span speed="https://zhiyindizhi5.top/">测速中</span></p>
+<p>地址 0 → <a target="_blank" href="https://zydizhi.sbs">https://zydizhi.sbs</a> <span speed="https://zydizhi.sbs/">测速中</span></p>
+<p>地址 1 → <a target="_blank" href="https://zydizhi1.sbs/">https://zydizhi1.sbs</a> <span speed="https://zydizhi1.sbs/">测速中</span></p>
+<p>地址 2 → <a target="_blank" href="https://zydizhi2.sbs/">https://zydizhi2.sbs</a> <span speed="https://zydizhi2.sbs/">测速中</span></p>
+<p>地址 3 → <a target="_blank" href="https://zydizhi3.sbs/">https://zydizhi3.sbs</a> <span speed="https://zydizhi3.sbs/">测速中</span></p>
+<p>地址 4 → <a target="_blank" href="https://zydizhi4.sbs/">https://zydizhi4.sbs</a> <span speed="https://zydizhi4.sbs/">测速中</span></p>
+<p>地址 5 → <a target="_blank" href="https://zydizhi5.sbs/">https://zydizhi5.sbs</a> <span speed="https://zydizhi5.sbs/">测速中</span></p>
 </div>
 
 <hr />
 <div id="xv">
-<p><a target="_blank" href="https://xvdizhi.com/?huijiadizhi.com"><img src="xvlogo.png" /></a></p>
+<p><a target="_blank" href="https://at.umtrack.com/e0n0Pb?cid=483"><img src="xvlogo.png" /></a></p>
 <p><a href="#xv">XVideos 中国大陆专线</a></p>
-<p>XV地址 → <a target="_blank" href="https://xvdizhi.com/?huijiadizhi.com">https://xvdizhi.com</a> <span speed="https://xvdizhi.com/">测速中</span></p>
-<p>地址 1 → <a target="_blank" href="https://xvdizhi1.top">https://xvdizhi1.top</a> <span speed="https://xvdizhi1.top/">测速中</span></p>
-<p>地址 2 → <a target="_blank" href="https://xvdizhi2.top/">https://xvdizhi2.top</a> <span speed="https://xvdizhi2.top/">测速中</span></p>
-<p>地址 3 → <a target="_blank" href="https://xvdizhi3.top/">https://xvdizhi3.top</a> <span speed="https://xvdizhi3.top/">测速中</span></p>
-<p>地址 4 → <a target="_blank" href="https://xvdizhi4.top/">https://xvdizhi4.top</a> <span speed="https://xvdizhi4.top/">测速中</span></p>
-<p>地址 5 → <a target="_blank" href="https://xvdizhi5.top/">https://xvdizhi5.top</a> <span speed="https://xvdizhi5.top/">测速中</span></p>
+<p>XV地址 → <a target="_blank" href="https://at.umtrack.com/e0n0Pb?cid=483">https://xvdizhi.com</a> <span speed="https://xvdizhi.com/">测速中</span></p>
+<p>地址 0 → <a target="_blank" href="https://xvdizhi.sbs">https://xvdizhi.sbs</a> <span speed="https://xvdizhi.sbs/">测速中</span></p>
+<p>地址 1 → <a target="_blank" href="https://xvdizhi1sbs">https://xvdizhi1.top</a> <span speed="https://xvdizhi1.sbs/">测速中</span></p>
+<p>地址 2 → <a target="_blank" href="https://xvdizhi2.sbs/">https://xvdizhi2.sbs</a> <span speed="https://xvdizhi2.sbs/">测速中</span></p>
+<p>地址 3 → <a target="_blank" href="https://xvdizhi3.sbs/">https://xvdizhi3.sbs</a> <span speed="https://xvdizhi3.sbs/">测速中</span></p>
+<p>地址 4 → <a target="_blank" href="https://xvdizhi4.sbs/">https://xvdizhi4.sbs</a> <span speed="https://xvdizhi4.sbs/">测速中</span></p>
+<p>地址 5 → <a target="_blank" href="https://xvdizhi5.sbs/">https://xvdizhi5.sbs</a> <span speed="https://xvdizhi5.sbs/">测速中</span></p>
 </div>
 
 <script>
@@ -116,23 +116,23 @@
   <style>.discord {position: fixed;bottom: 0rem;left: 10.5rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;} .d2 {position: fixed;bottom: 0rem;left: 14rem;padding-bottom: 80px;}</style>
 </a>
 
-<a href="https://xindizhi.github.io/zhiyin/?huijiadizhi.com" target="_blank" style="z-index: 9999;" aria-label="知阴">
+<a href="https://zuixindizhi007.github.io/zhiyin/?huijiadizhi.com" target="_blank" style="z-index: 9999;" aria-label="知阴">
   <button class="d3"><img src="arrow-down.gif" width="20px"></button><button class="zy"><img src="zhiyinlogo.png" height="75x"></button>
   <style>.zy {position: fixed;bottom: 0rem;left: 19.9rem;} .d3 {position: fixed;bottom: 0rem;left: 30rem;padding-bottom: 80px;}</style>
 </a>
 
-<a href="https://xindizhi.github.io/xv/?huijiadizhi.com" target="_blank" style="z-index: 9999;" aria-label="XVideoS中文版">
+<a href="https://zuixindizhi007.github.io/xv/?huijiadizhi.com" target="_blank" style="z-index: 9999;" aria-label="XVideoS中文版">
   <button class="d4"><img src="arrow-down.gif" width="20px"></button><button class="xv"><img src="xvlogo.png" height="75x"></button>
   <style>.xv {position: fixed;bottom: 0rem;left: 35.9rem;} .d4 {position: fixed;bottom: 0rem;left: 50rem;padding-bottom: 80px;}</style>
 </a>
 
-<a href="https://xindizhi.github.io/dyxs/?huijiadizhi.com" target="_blank" style="z-index: 9999;" aria-label="电影先生">
+<a href="https://zuixindizhi007.github.io/dyxs/?huijiadizhi.com" target="_blank" style="z-index: 9999;" aria-label="电影先生">
   <button class="d5"><img src="arrow-down.gif" width="20px"></button><button class="dyxs"><img src="dyxslogo.png" height="75x"></button>
   <style>.dyxs {position: fixed;bottom: 0rem;left: 50rem;} .d5 {position: fixed;bottom: 0rem;left: 60rem;padding-bottom: 80px;}</style>
 </a>
 
 
-<a href="https://xindizhi.github.io/waipian/?huijiadizhi.com" target="_blank" style="z-index: 9999;" aria-label="歪片星球">
+<a href="https://zuixindizhi007.github.io/waipian/?huijiadizhi.com" target="_blank" style="z-index: 9999;" aria-label="歪片星球">
   <button class="d6"><img src="arrow-down.gif" width="20px"></button><button class="wpxs"><img src="wpxqlogo.png" height="75x"></button>
   <style>.wpxs {position: fixed;bottom: 0rem;left: 65.9rem;} .d6 {position: fixed;bottom: 0rem;left: 75rem;padding-bottom: 80px;}</style>
 </a>
