--- a/dyxs/index.html
+++ b/dyxs/index.html
@@ -41,10 +41,10 @@
 <hr/>
 <h1>电影先生最新地址</h1>
 <h1>域名列表</h1>
-<h3><a target="_blank" href="http://dyxs.me">回家地址/最新域名/请牢记/收藏/截屏本页，或添加至浏览器收藏/桌面图标！</a></h3>
+<h3><a target="_blank" href="https://at.umtrack.com/zC8H5f?cid=483">回家地址/最新域名/请牢记/收藏/截屏本页，或添加至浏览器收藏/桌面图标！</a></h3>
 <p><a target="_blank" href="http://dyxs.me">https://dyxs.me</a> <span speed="https://dyxs.me">测速中</span></p>
 <p><a target="_blank" href="http://dyxs.de">https://dyxs.de</a> <span speed="hhttps://dyxs.de">测速中</span></p>
-<p><a target="_blank" href="http://dianying.in">https://dianying.in</a> <span speed="https://dianying.in">测速中</span></p>
+<p><a target="_blank" href="http://www.dianyingim.com">https://www.dianyingim.com</a> <span speed="https://www.dianyingim.com">测速中</span></p>
 
 <h3>最新线路：</h3>
 <p><a target="_blank" href="https://dyxs29.com">https://dyxs29.com</a> <span speed="https://dyxs29.com">测速中</span></p>
@@ -66,7 +66,7 @@
 <p><a target="_blank" href="https://dyxs9.xyz">https://dyxs9.xyz</a> <span speed="https://dyxs9.xyz">测速中</span></p>
 
 <h3>官方域名  ：</h3>
-<p><a target="_blank" href="https://DianYingim.com">https://www.DianYingim.com</a> 国外专线/长期/稳定 <span speed="https://www.DianYingim.com">测速中</span></p>
+<p><a target="_blank" href="https://www.DianYingim.com">https://www.DianYingim.com</a> 国外专线/长期/稳定 <span speed="https://www.DianYingim.com">测速中</span></p>
 
 <a href="app/dyxs-mobile-pad_v673_20240718.apk" target="_blank" style="z-index: 9999;" aria-label="电影先生APP下载">
   <button class="d3"><img src="arrow-down.gif" width="20px"></button>
