--- a/waipian/app/index.html
+++ b/waipian/app/index.html
@@ -1,6 +1,6 @@
-﻿<html lang="zh-cn">
+<html lang="zh-cn">
 <head>
-<meta http-equiv="refresh" content="0; url='https://xindizhi.github.io/waipian/?/app'">
+<meta http-equiv="refresh" content="0; url='https://zuixindizhi007.github.io/waipian/?/app'">
 </head>
 <body>
 </body>
