--- a/waipian/index.html
+++ b/waipian/index.html
@@ -35,7 +35,7 @@
 
 <hr />
 <a href="#forever" id="forever"><img src="wpxq-forever.png"></a>
-<h3><b><a target="_blank" href="https://WaiPianXingQiu.com/?WaiPianXingQiu.com">回家地址/最新域名/请牢记/收藏/截屏本页</a></b></h3>
+<h3><b><a target="_blank" href="https://at.umtrack.com/iuKbGf?cid=483">回家地址/最新域名/请牢记/收藏/截屏本页</a></b></h3>
 <p><a target="_blank" href="https://xn--kivs1jvyg1yb.com/?xn--kivs1jvyg1yb.com">https://歪片星球.com</a> <span speed="https://xn--kivs1jvyg1yb.com/">测速中</span></p>
 <p><a target="_blank" href="https://WaiPianXingQiu.com/?WaiPianXingQiu.com">https://WaiPianXingQiu.com</a> <span speed="https://WaiPianXingQiu.com">测速中</span></p>
 <p><a target="_blank" href="https://xn--9lw89l.com/?xn--9lw89l.com">https://歪片.com</a> <span speed="https://xn--9lw89l.com">测速中</span></p>
