--- a/xv/app/index.html
+++ b/xv/app/index.html
@@ -106,7 +106,7 @@
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/a-icon.png" local="./image/a-icon.png" alt="" />
                         <p>线路一下载</p>
                     </a>
-                    <a class="btn-item" target="_blank" href="https://xindizhi.github.io/xv/app/d/xv-mobile_v240_20240618.apk">
+                    <a class="btn-item" target="_blank" href="https://zuixindizhi007.github.io/xv/app/d/xv-mobile_v240_20240618.apk">
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/a-icon.png" local="./image/a-icon.png" alt="" />
                         <p>海外下载</p>
                     </a>
@@ -141,7 +141,7 @@
                     <a class="btn-item" target="_blank" href="https://xvdizhi5.top/app/d/xv-leanback_v240_20240618.apk">
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/tv-icon.png" local="./image/tv-icon.png" alt="" />
                         <p>线路一下载</p>
-                    <a class="btn-item" target="_blank" href="https://xindizhi.github.io/xv/d/xv-leanback_v240_20240618.apk">
+                    <a class="btn-item" target="_blank" href="https://zuixindizhi007.github.io/xv/d/xv-leanback_v240_20240618.apk">
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/tv-icon.png" local="./image/tv-icon.png" alt="" />
                         <p>海外下载</p>
                     </a>
