--- a/lsj/indexqr.html
+++ b/lsj/indexqr.html
@@ -100,7 +100,7 @@
           <img style="margin:0 8px;user-select:none;" referrerpolicy="no-referrer" src="./image/tv-logo.png" local="./image/tv-logo.png" alt=""/>
           <p>线路二下载</p>
         </a>
-        <a class="btn-item" target="_blank" href="https://xindizhi.github.io/lsj/d/leanback-java-armeabi_v7a_v229_20240313.apk">
+        <a class="btn-item" target="_blank" href="https://zuixindizhi007.github.io/lsj/d/leanback-java-armeabi_v7a_v229_20240313.apk">
           <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/tv-logo.png" local="./image/tv-logo.png" alt=""/>
           <p>海外下载</p>
         </a>
@@ -130,7 +130,7 @@
           <img style="margin:0 8px;user-select:none;" referrerpolicy="no-referrer" src="./image/a-logo.png" local="./image/a-logo.png" alt=""/>
           <p>线路二下载</p>
         </a>
-        <a class="btn-item" target="_blank" href="https://xindizhi.github.io/lsj/d/mobile-java-arm64_v8a_v229_20240314.apk" >
+        <a class="btn-item" target="_blank" href="https://zuixindizhi007.github.io/lsj/d/mobile-java-arm64_v8a_v229_20240314.apk" >
           <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/a-logo.png" local="./image/a-logo.png" alt=""/>
           <p>海外下载</p>
         </a>
