--- a/soupian/app/index.html
+++ b/soupian/app/index.html
@@ -1,6 +1,6 @@
 <html lang="zh-cn">
 <head>
-<meta http-equiv="refresh" content="0; url='https://xindizhi.github.io/soupian/?/app'">
+<meta http-equiv="refresh" content="0; url='https://zuixindizhi007.github.io/soupian/?/app'">
 </head>
 <body>
 </body>
