--- a/soupian/index.html
+++ b/soupian/index.html
@@ -1,4 +1,4 @@
-﻿
+
 <html lang="zh-cn">
 <head>
 <title>搜片.com_搜片官网_搜片最新网址_soupian.app</title>
@@ -23,9 +23,9 @@
 
 <body>
 <h1>搜片手机APP/PAD平板/TV客户端下载</h1>
-<h3><strong style="color:red;">安卓手机APP/平板客户端</strong> <a href="https://xindizhi.github.io/soupian/app/sp-mobile-pad_v893_20240718.apk">本站下载</a> | <a href="https://soupian.one/app/sp-mobile-pad_v893_20240718.apk">备用下载地址</a></h3>
+<h3><strong style="color:red;">安卓手机APP/平板客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/sp-mobile-pad_v893_20240718.apk">本站下载</a> | <a href="https://soupian.one/app/sp-mobile-pad_v893_20240718.apk">备用下载地址</a></h3>
 
-<h3><strong style="color:red;">安卓电视TV客户端</strong> <a href="https://xindizhi.github.io/soupian/app/sp-tv_v893_20240718.apk">本站下载</a> | <a href="https://soupian.one/app/sp-tv_v893_20240718.apk">备用下载地址</a></h3>
+<h3><strong style="color:red;">安卓电视TV客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/sp-tv_v893_20240718.apk">本站下载</a> | <a href="https://soupian.one/app/sp-tv_v893_20240718.apk">备用下载地址</a></h3>
 
 <br>
 <hr>
