--- a/zhiyin/index.html
+++ b/zhiyin/index.html
@@ -46,27 +46,27 @@
         <div class="m-2">
             
         <section class="has-background-link-dark has-text-warning-lighthas-text-danger has-background-warning">
-            <a href="https://xindizhi.github.io/zhiyin/?HuanXianYe-Top" target="_blank" class="box p-3 has-background-warning has-text-centered has-text-dark">❤️请收藏本页到浏览器</span> & 牢记<font color="red">zy</font>地址：http://<font color="red">zy</font>DiZhi.com &nbsp; &nbsp; http://<font color="red">知阴</font>.com</a>
+            <a href="https://zuixindizhi007.github.io/zhiyin/?HuanXianYe-Top" target="_blank" class="box p-3 has-background-warning has-text-centered has-text-dark">❤️请收藏本页到浏览器</span> & 牢记<font color="red">zy</font>地址：http://<font color="red">zy</font>DiZhi.com &nbsp; &nbsp; http://<font color="red">知阴</font>.com</a>
             知阴.com 中文版 手机APP/PAD平板/电视TV客户端下载 <br>永久免费/无需注册登陆/无需翻墙即可观看
         </section>
 
 
         <div class=" has-text-weight-bold">
         <div style="display: flex; flex-wrap: wrap;" class="box p-0">
-            <a target="_blank" href="/xv/d/xv-mobile-pad_v262_20240626.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
+            <a target="_blank" href="/xv/d/xv-mobile-pad_v263_20240718.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
                 <div>
                 <u><b>手机APP/PAD平板下载⬇️</b></u>
                 </div>
             </a>
 
-            <a target="_blank" href="/xv/d/xv-tv_v262_20240626.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
+            <a target="_blank" href="/xv/d/xv-tv_v263_20240718.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
                 <div>
                 <u><b>电视TV客户端下载⬇️</b></u>
                 </div>
             </a>
         </div>
 
-        <a target="_blank" class="box p-2 has-text-centered" href="http://zhiyindizhi.sbs/">
+        <a target="_blank" class="box p-2 has-text-centered" href="http://zydizhi.sbs/">
             <p><font color="red">http://ZYDiZhi</font>.sbs <span speed="http://ZYDiZhi.sbs">测速中</span></p>
         </a>
         <a target="_blank" class="box p-2 has-text-centered" href="http://ZYDiZhi1.sbs/">
@@ -88,12 +88,12 @@
         <font color="gray">域名列表更新时间：2024年7月12日</font><br>
         
         <div style="display: flex; flex-wrap: wrap;" class="box p-0">
-            <a target="_blank" href="/xv/d/xv-mobile-pad_v262_20240626.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
+            <a target="_blank" href="/xv/d/xv-mobile-pad_v263_20240718.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
                 <div>
                 <p><u><b>安卓手机APP/PAD平板下载📱⬇️</b></u> 永久免费/无需注册登陆/无需翻墙即可观看</p>
                 </div>
             </a>
-            <a target="_blank" href="/xv/d/xv-tv_v262_20240626.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
+            <a target="_blank" href="/xv/d/xv-tv_v263_20240718.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
                 <div>
                 <p><u><b>电视TV客户端下载🖥️⬇️</b></u> 永久免费/无需注册登陆/无需翻墙即可观看/无广告</p>
                 </div>
