--- a/lsj/index.html
+++ b/lsj/index.html
@@ -96,7 +96,7 @@
           <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/tv-logo.png" local="./image/tv-logo.png" alt=""/>
           <p>线路一下载</p>
         </a>
-        <a class="btn-item" target="_blank" href="https://154.88.15.99/d/app_v217_20240308.apk">
+        <a class="btn-item" target="_blank" href="http://154.88.15.99/d/app_v217_20240308.apk">
           <img style="margin:0 8px;user-select:none;" referrerpolicy="no-referrer" src="./image/tv-logo.png" local="./image/tv-logo.png" alt=""/>
           <p>线路二下载</p>
         </a>
