--- a/xv/app/index.html
+++ b/xv/app/index.html
@@ -102,15 +102,15 @@
                     <div class="subtitle" style="color:#7fd3d7;">完美支持投屏到电视</div>
                 </div>
                 <div class="btn-list">
-                    <a class="btn-item" target="_blank" href="https://xvdizhi5.top/app/d/xv-mobile_v240_20240618.apk">
+                    <a class="btn-item" target="_blank" href="https://xvdizhi19.sbs/app/d/xv-mobile-pad_v300_20250108.apk">
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/a-icon.png" local="./image/a-icon.png" alt="" />
                         <p>线路一下载</p>
                     </a>
-                    <a class="btn-item" target="_blank" href="https://zuixindizhi007.github.io/xv/app/d/xv-mobile_v240_20240618.apk">
+                    <a class="btn-item" target="_blank" href="https://zuixindizhi007.github.io/xv/app/d/xv-mobile-pad_v300_20250108.apk">
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/a-icon.png" local="./image/a-icon.png" alt="" />
                         <p>海外下载</p>
                     </a>
-                    <a class="btn-item" target="_blank" href="https://xvdizhi5.top/?github">
+                    <a class="btn-item" target="_blank" href="https://xvdizhi19.sbs/?github">
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/browser-icon.png" local="./image/tv-icon.png" alt="" />
                         <p>网页版</p>
                     </a>
@@ -138,14 +138,14 @@
                 <a style="color:#d7d67f;border-bottom:#d7d67f 1px solid;user-select: none" target="_blank" href="https://www.baidu.com/s?ie=utf-8&wd=%E6%80%8E%E4%B9%88%E5%AE%89%E8%A3%85apk%E5%88%B0%E7%94%B5%E8%A7%86">下载到U盘后，再插入电视进行安装>>
                 </a>
                 <div class="btn-list">
-                    <a class="btn-item" target="_blank" href="https://xvdizhi5.top/app/d/xv-leanback_v240_20240618.apk">
+                    <a class="btn-item" target="_blank" href="https://xvdizhi19.sbs/app/d/xv-tv_v300_20250108.apk">
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/tv-icon.png" local="./image/tv-icon.png" alt="" />
                         <p>线路一下载</p>
-                    <a class="btn-item" target="_blank" href="https://zuixindizhi007.github.io/xv/d/xv-leanback_v240_20240618.apk">
+                    <a class="btn-item" target="_blank" href="https://zuixindizhi007.github.io/xv/d/xv-tv_v300_20250108.apk">
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/tv-icon.png" local="./image/tv-icon.png" alt="" />
                         <p>海外下载</p>
                     </a>
-                    <a class="btn-item" target="_blank" href="https://xvdizhi5.top/?github">
+                    <a class="btn-item" target="_blank" href="https://xvdizhi19.sbs/?github">
                         <img style="user-select:none;" referrerpolicy="no-referrer" src="./image/browser-icon.png" local="./image/tv-icon.png" alt="" />
                         <p>网页版</p>
                     </a>
