--- a/xv/index.html
+++ b/xv/index.html
@@ -46,13 +46,13 @@
 
         <div class=" has-text-weight-bold">
         <div style="display: flex; flex-wrap: wrap;" class="box p-0">
-            <a target="_blank" href="d/xv-mobile-pad_v263_20240718.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
+            <a target="_blank" href="d/xv-mobile-pad_v300_20250108.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
                 <div>
                 <u><b>手机APP/PAD平板下载⬇️</b></u>
                 </div>
             </a>
 
-            <a target="_blank" href="d/xv-tv_v263_20240718.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
+            <a target="_blank" href="d/xv-tv_v300_20250108.apk" style="flex: 50%; padding: 10px; box-sizing: border-box; background-color: blue; color: white;" class="has-background-danger has-text-warning-light">
                 <div>
                 <u><b>电视TV客户端下载⬇️</b></u>
                 </div>
@@ -61,25 +61,25 @@
 
         
 
-        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi7.sbs/">
-            <p>https://xvdizhi<font color="red">7</font>.sbs <span speed="https://xvdizhi7.sbs">测速中</span></p>
+        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi17.sbs/">
+            <p>https://xvdizhi<font color="red">17</font>.sbs <span speed="https://xvdizhi17.sbs">测速中</span></p>
         </a>
-        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi8.sbs/">
-            <p>https://xvdizhi<font color="red">8</font>.sbs <span speed="https://xvdizhi8.sbs">测速中</span></p>
+        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi18.sbs/">
+            <p>https://xvdizhi<font color="red">18</font>.sbs <span speed="https://xvdizhi18.sbs">测速中</span></p>
         </a>
-        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi9.sbs/">
-            <p>https://xvdizhi<font color="red">9</font>.sbs <span speed="https://xvdizhi9.sbs">测速中</span></p>
+        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi19.sbs/">
+            <p>https://xvdizhi<font color="red">19</font>.sbs <span speed="https://xvdizhi19.sbs">测速中</span></p>
         </a>
-        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi10.sbs/">
-            <p>https://xvdizhi<font color="red">10</font>.sbs <span speed="https://xvdizhi10.sbs/">测速中</span></p>
+        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi20.sbs/">
+            <p>https://xvdizhi<font color="red">20</font>.sbs <span speed="https://xvdizhi20.sbs/">测速中</span></p>
         </a>
-        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi11.sbs/">
-            <p>https://xvdizhi<font color="red">11</font>.sbs <span speed="https://xvdizhi11.sbs">测速中</span></p>
+        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi21.sbs/">
+            <p>https://xvdizhi<font color="red">21</font>.sbs <span speed="https://xvdizhi21.sbs">测速中</span></p>
         </a>
-        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi6.sbs/">
-            <p>https://xvdizhi<font color="red">6</font>.sbs <span speed="https://xvdizhi6.sbs">测速中</span></p>
+        <a target="_blank" class="box p-2 has-text-centered" href="https://xvdizhi.sbs/">
+            <p><font color="red">https://xvdizhi</font>.sbs <span speed="https://xvdizhi.sbs">测速中</span></p>
         </a>
-        <font color="gray">域名列表更新时间：2024年9月12日</font><br>
+        <font color="gray">域名列表更新时间：2025年01月08日</font><br>
 
         <div style="display: flex; flex-wrap: wrap;" class="box p-0">
             <a target="_blank" href="d/xv-mobile-pad_v263_20240718.apk" style="flex: 50%; padding: 10px; box-sizing: border-box;" class="has-background-link-dark has-text-warning-light">
@@ -101,16 +101,7 @@
         </small>
         <br>
         已被封不保证能正常访问的域名：<br>
-        <s style="color:gray">https://xvdizhi6.top/</s><br>
-        <s style="color:gray">https://xvdizhi5.top</s><br>
-        <s style="color:gray">https://xvdizhi4.top</s><br>
-        <s style="color:gray">https://xvdizhi3.top</s><br>
-        <s style="color:gray">https://xvdizhi2.top</s><br>
-        <s style="color:gray">https://xvdizhi1.top</s><br>
-        <s style="color:gray">https://xv2312.top/</s><br>
-        <s style="color:gray">https://xv2311.top</s><br>
-        <s style="color:gray">https://xv2310.top</s><br>
-        <s style="color:gray">https://xv2309.top</s><br>
+        <s style="color:gray">https://xvdizhi16.top/</s><br>
         <hr />
         <p>回家地址 1.1 → <a target="_blank" href="https://HuiJiaDiZhi.com">https://HuiJiaDiZhi.com</a> <span speed="https://HuiJiaDiZhi.com">测速中</span></p>
         <p>回家地址 1.2 → <a target="_blank" href="https://HuiJiaDiZhi.xyz">https://HuiJiaDiZhi.xyz</a> <span speed="https://HuiJiaDiZhi.xyz">测速中</span></p>
