--- a/dyxs/index.html
+++ b/dyxs/index.html
@@ -26,8 +26,8 @@
 <p>下载提示：苹果APP客户端暂未开放下载，请收藏 电影先生 http://dyxs.me http://dyxs.de 域名到浏览器，或添加至桌面图标。</p>
 <!-- <p><a target="_blank" href="https://at.umtrack.com/zqW1fi?cid=483"><img src="apk-qrcode.png"/></a></p>
 <p>安卓手机扫码下载</p> -->
-<p>安卓手机/PAD平板APK【<a target="_blank" href="app/dyxs-mobile-pad_v700_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://dyxs30.com/app/dyxs-mobile-pad_v700_20250108.apk">源站下载⏬</a>】</p>
-<p>电视TV客户端【<a target="_blank" href="app/dyxs-tv_v700_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://dyxs30.com/app/dyxs-tv_v700_20250108.apk">源站下载⏬</a>】</p>
+<p>安卓手机/PAD平板APK【<a target="_blank" href="app/dyxs-mobile-pad_v700_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://www.dianyingim.com/app/dyxs-mobile-pad_v700_20250108.apk">源站下载⏬</a>】</p>
+<p>电视TV客户端【<a target="_blank" href="app/dyxs-tv_v700_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://www.dianyingim.com/app/dyxs-tv_v700_20250108.apk">源站下载⏬</a>】</p>
 <!-- <p>【<a target="_blank" href="https://at.umtrack.com/5HTrWv?cid=483">下载安卓APK(海外节点)⏬</a>】</p> -->
 <ul>
 <li><b>防封</b>：如果域名被封无法访问，可通过App打开、查看最新网址；</li>
