--- a/waipian/index.html
+++ b/waipian/index.html
@@ -27,8 +27,8 @@
 <p>下载提示：苹果APP客户端暂未开放下载，请收藏 <a target="_blank" href="https://xn--kivs1jvyg1yb.com/">歪片星球.com</a> 域名到浏览器，或添加至桌面图标。</p>
 <!-- <p><a target="_blank" href="https://at.umtrack.com/zqW1fi?cid=483"><img src="apk-qrcode.png?1129"/></a></p> -->
 <!-- <p>安卓手机扫码下载</p> -->
-<p>安卓手机/PAD平板APK【<a target="_blank" href="app/wp-mobile-pad_v910_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian28.com/app/wp-mobile-pad_v910_20250108.apk">源站下载⏬</a>】</p>
-<p>电视TV客户端【<a target="_blank" href="app/wp-tv_v910_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian28.com/app/wp-tv_v910_20250108.apk">源站下载⏬</a>】</p>
+<p>安卓手机/PAD平板APK【<a target="_blank" href="app/wp-mobile-pad_v910_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian.tv/app/wp-mobile-pad_v910_20250108.apk">源站下载⏬</a>】</p>
+<p>电视TV客户端【<a target="_blank" href="app/wp-tv_v910_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian.tv/app/wp-tv_v910_20250108.apk">源站下载⏬</a>】</p>
 <!-- <p>【<a target="_blank" href="https://at.umtrack.com/jaiSzC?cid=483">下载安卓APK(国内线路)⏬</a>】</p>
 <p>【<a target="_blank" href="https://at.umtrack.com/5HTrWv?cid=483">下载安卓APK(海外线路)⏬</a>】</p> -->
 <ul><li><b>防封</b>：如果域名被封无法访问，可通过App打开、查看最新网址；</li><li><b>最新</b>：最新热门VIP在线看与下载资源同步更新；</li><li><b>多源</b>：持续添加优质线路、视频源供您切换，画质清晰、播放流畅；</li><li><b>海量</b>：聚合全网资源，想看啥就看啥</li><li><b>下载</b>：聚合全网下载，持续完善资源库</li></ul>
@@ -47,19 +47,19 @@
 <p>福建、福州、江苏，以及浙江 北京地区，以及所有的中国移动网络，均可能会打不开</p>
 <p><a target="_blank" href="https://WaiPian8.com/?WaiPianXingQiu.com">https://WaiPian8.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
 <!-- <p><a target="_blank" href="https://WaiPian9.com/?WaiPianXingQiu.com">https://WaiPian9.com</a> (被墙)</p> -->
-<p><a target="_blank" href="https://WaiPian10.com/?WaiPianXingQiu.com">https://WaiPian10.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian11.com/?WaiPianXingQiu.com">https://WaiPian11.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian12.com/?WaiPianXingQiu.com">https://WaiPian12.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian13.com/?WaiPianXingQiu.com">https://WaiPian13.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian14.com/?WaiPianXingQiu.com">https://WaiPian14.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian15.com/?WaiPianXingQiu.com">https://WaiPian15.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian16.com/?WaiPianXingQiu.com">https://WaiPian16.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian17.com/?WaiPianXingQiu.com">https://WaiPian17.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian18.com/?WaiPianXingQiu.com">https://WaiPian18.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian19.com/?WaiPianXingQiu.com">https://WaiPian19.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian20.com/?WaiPianXingQiu.com">https://WaiPian20.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian21.com/?WaiPianXingQiu.com">https://WaiPian21.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
-<p><a target="_blank" href="https://WaiPian22.com/?WaiPianXingQiu.com">https://WaiPian22.com</a> <span speed="https://WaiPian8.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian10.com/?WaiPianXingQiu.com">https://WaiPian10.com</a> <span speed="https://WaiPian10.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian11.com/?WaiPianXingQiu.com">https://WaiPian11.com</a> <span speed="https://WaiPian11.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian12.com/?WaiPianXingQiu.com">https://WaiPian12.com</a> <span speed="https://WaiPian12.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian13.com/?WaiPianXingQiu.com">https://WaiPian13.com</a> <span speed="https://WaiPian13.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian14.com/?WaiPianXingQiu.com">https://WaiPian14.com</a> <span speed="https://WaiPian14.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian15.com/?WaiPianXingQiu.com">https://WaiPian15.com</a> <span speed="https://WaiPian15.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian16.com/?WaiPianXingQiu.com">https://WaiPian16.com</a> <span speed="https://WaiPian16.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian17.com/?WaiPianXingQiu.com">https://WaiPian17.com</a> <span speed="https://WaiPian17.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian18.com/?WaiPianXingQiu.com">https://WaiPian18.com</a> <span speed="https://WaiPian18.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian19.com/?WaiPianXingQiu.com">https://WaiPian19.com</a> <span speed="https://WaiPian19.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian20.com/?WaiPianXingQiu.com">https://WaiPian20.com</a> <span speed="https://WaiPian20.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian21.com/?WaiPianXingQiu.com">https://WaiPian21.com</a> <span speed="https://WaiPian21.com">测速中</span></p>
+<p><a target="_blank" href="https://WaiPian22.com/?WaiPianXingQiu.com">https://WaiPian22.com</a> <span speed="https://WaiPian22.com">测速中</span></p>
 
 <h3>2022年1月7日最新线路：</h3>
 <!-- <p><a target="_blank" href="https://WaiPian6.com/?WaiPianXingQiu.com">https://WaiPian6.com</a> (被墙)</p> -->
