--- a/dyxs/index.html
+++ b/dyxs/index.html
@@ -14,7 +14,7 @@
 
   gtag('config', 'G-WD61439VDR');
 </script>
-
+<script defer src="font-awesome_all.min.js"></script>
 </head>
 <body>
 <h1>Ctrl+D 收藏本页面到浏览器，永不迷路，永不被封！</h1>
@@ -73,20 +73,28 @@
 </a>
 <a href="app/dyxs-mobile-pad_v700_20250108.apk" target="_blank" style="z-index: 9999;" aria-label="电影先生APP下载">
   <button class="dyxs"><img src="dyxs-app.png" height="75x" title="电影先生APK下载"></button>
-  <style>.dyxs {position: fixed;bottom: 0rem;left: 19.9rem;} .d3 {position: fixed;bottom: 0rem;left: 30rem;padding-bottom: 80px;}</style>
+  <style>.dyxs {position: fixed;bottom: 0rem;left: 26%;} .d3 {position: fixed;bottom: 0rem;left: 26%;padding-bottom: 80px;}</style>
 </a>
 
 <p>如果您认可电影先生，请分享给你的好友！</p>
 <br><br><br>
-<a href="https://t.me/DianYingXianShengBOT" target="_blank" style="z-index: 9999;" aria-label="合作Telegram">
-  <button class="telegram-btn">合作Telegram</button>
-  <style>.telegram-btn {position: fixed;bottom: 0rem;left: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.telegram-btn svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.telegram-btn:hover svg{animation:telegram-wave 560ms ease-in-out;}@keyframes telegram-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.telegram-btn:hover svg{animation:none}.telegram-btn svg{animation:telegram-wave 560ms ease-in-out}}</style>
+
+<a href="https://t.me/Movie_Ranking" target="_blank" style="z-index: 9999;" aria-label="资源群">
+  <button class="telegram-btn1"><i class="fa-brands fa-telegram fa-bounce" style="color: #74C0FC; display: flex; align-items: center; justify-content: center; height: 100%;"></i> Telegram资源群</button>
+  <style>.telegram-btn1 {position: fixed;bottom: 0rem;left: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.telegram-btn1 svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.telegram-btn1:hover svg{animation:telegram-wave 560ms ease-in-out;}@keyframes telegram-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.telegram-btn1:hover svg{animation:none}.telegram-btn1 svg{animation:telegram-wave 560ms ease-in-out}}</style>
 </a>
 
-<a href="https://discord.gg/wH7hPaVysj" target="_blank" style="z-index: 9999;" aria-label="Discord群">
-  <button class="discord-btn">Discord群</button>
-  <style>.discord-btn {position: fixed;bottom: 0rem;right: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.discord-btn svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.discord-btn:hover svg{animation:discord-wave 560ms ease-in-out;}@keyframes discord-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.discord-btn:hover svg{animation:none}.discord-btn svg{animation:discord-wave 560ms ease-in-out}}</style>
+<a href="https://discord.gg/9MkKdHZDW4" target="_blank" style="z-index: 9999;" aria-label="Discord群">
+  <button class="discord-btn"><i class="fa-brands fa-discord fa-beat-fade" style="color: #74C0FC; display: flex; align-items: center; justify-content: center; height: 100%;"></i> Discord群</button>
+  <style>.discord-btn {position: fixed;bottom: 0rem;left: 65%;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.discord-btn svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.discord-btn:hover svg{animation:discord-wave 560ms ease-in-out;}@keyframes discord-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.discord-btn:hover svg{animation:none}.discord-btn svg{animation:discord-wave 560ms ease-in-out}}</style>
 </a>
+
+<a href="https://t.me/DianYingXianShengBOT" target="_blank" style="z-index: 9999;" aria-label="联系站长">
+  <button class="telegram-btn2"><i class="fa-brands fa-telegram fa-bounce" style="color: #74C0FC; display: flex; align-items: center; justify-content: center; height: 100%;"></i> 联系站长</button>
+  <style>.telegram-btn2 {position: fixed;bottom: 0rem;right: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.telegram-btn2 svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.telegram-btn2:hover svg{animation:telegram-wave 560ms ease-in-out;}@keyframes telegram-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.telegram-btn2:hover svg{animation:none}.telegram-btn2 svg{animation:telegram-wave 560ms ease-in-out}}</style>
+</a>
+
+
 
 <script>
   var ping = 1;
