--- a/soupian/index.html
+++ b/soupian/index.html
@@ -1,4 +1,3 @@
-
 <html lang="zh-cn">
 <head>
 <title>搜片.com_搜片官网_搜片最新网址_soupian.app</title>
@@ -18,16 +17,15 @@
 
   gtag('config', 'G-GJZY713X5Z');
 </script>
-
+<script defer src="font-awesome_all.min.js"></script>
 </head>
 
 <body>
 <h1>搜片手机APP/PAD平板/TV客户端下载</h1>
-<h3><strong style="color:red;">安卓手机APP/平板客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/sp-mobile-pad_v900_20250108.apk">本站下载</a> | <a href="https://soupian.one/app/sp-mobile-pad_v900_20250108.apk">备用下载地址</a></h3>
+<h3><strong style="color:red;">安卓手机APP/平板客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/sp-mobile-pad_v901_20250115.apk">本站下载</a> | <a href="https://soupian.one/app/sp-mobile-pad_v901_20250115.apk">备用下载地址</a></h3>
 
-<h3><strong style="color:red;">安卓电视TV客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/sp-tv_v900_20250108.apk">本站下载</a> | <a href="https://soupian.one/app/sp-tv_v900_20250108.apk">备用下载地址</a></h3>
+<h3><strong style="color:red;">安卓电视TV客户端</strong> <a href="https://zuixindizhi007.github.io/soupian/app/sp-tv_v901_20250115.apk">本站下载</a> | <a href="https://soupian.one/app/sp-tv_v901_20250115.apk">备用下载地址</a></h3>
 
-<br>
 <hr>
 <h1>搜片.com 最新地址</h1>
 Ctrl+D 收藏本页面到浏览器，永不迷路，永不被封！
@@ -37,6 +35,12 @@ Ctrl+D 收藏本页面到浏览器，永不迷路，永不被封！
 <h4><a target="_blank" href="https://soupian.one">https://soupian.one</a> <span speed="https://soupian.one">测速中</span></h4>
 <h4><a target="_blank" href="https://soupian.de">https://soupian.de</a> <span speed="https://soupian.de">测速中</span></h4>
 <h4><a target="_blank" href="https://soupian.icu">https://soupian.icu</a> <span speed="https://soupian.icu">测速中</span></h4>
+
+<hr>
+<i class="fa-brands fa-telegram fa-bounce" style="color: #298edb;"></i> <b>Telegram资源分享群</b> <a target="_blank" href="https://t.me/Movie_Ranking">https://t.me/Movie_Ranking</a><br>
+<i class="fa-brands fa-discord fa-bounce" style="color: #298edb;"></i> <b>Discord群</b> <a target="_blank" href="https://discord.gg/9MkKdHZDW4">https://discord.gg/9MkKdHZDW4</a><br>
+<i class="fa-brands fa-telegram fa-bounce" style="color: #298edb;"></i> <b>联系站长Telegram</b> <a target="_blank" href="https://t.me/SouPian_BOT">https://t.me/SouPian_BOT</a><br>
+
 
 <script>
   var ping = 1;
