--- a/waipian/index.html
+++ b/waipian/index.html
@@ -14,7 +14,7 @@
 
   gtag('config', 'G-QJ75MZ5NY9');
 </script>
-
+<script defer src="font-awesome_all.min.js"></script>
 </head>
 <body>
 <h1>歪片星球最新地址</h1>
@@ -27,8 +27,8 @@
 <p>下载提示：苹果APP客户端暂未开放下载，请收藏 <a target="_blank" href="https://xn--kivs1jvyg1yb.com/">歪片星球.com</a> 域名到浏览器，或添加至桌面图标。</p>
 <!-- <p><a target="_blank" href="https://at.umtrack.com/zqW1fi?cid=483"><img src="apk-qrcode.png?1129"/></a></p> -->
 <!-- <p>安卓手机扫码下载</p> -->
-<p>安卓手机/PAD平板APK【<a target="_blank" href="app/wp-mobile-pad_v910_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian.tv/app/wp-mobile-pad_v910_20250108.apk">源站下载⏬</a>】</p>
-<p>电视TV客户端【<a target="_blank" href="app/wp-tv_v910_20250108.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian.tv/app/wp-tv_v910_20250108.apk">源站下载⏬</a>】</p>
+<p>安卓手机/PAD平板APK【<a target="_blank" href="app/wp-mobile-pad_v911_20250115.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian.tv/app/wp-mobile-pad_v911_20250115.apk">源站下载⏬</a>】</p>
+<p>电视TV客户端【<a target="_blank" href="app/wp-tv_v911_20250115.apk">本站下载⏬</a>】 | 【<a target="_blank" href="https://waipian.tv/app/wp-tv_v911_20250115.apk">源站下载⏬</a>】</p>
 <!-- <p>【<a target="_blank" href="https://at.umtrack.com/jaiSzC?cid=483">下载安卓APK(国内线路)⏬</a>】</p>
 <p>【<a target="_blank" href="https://at.umtrack.com/5HTrWv?cid=483">下载安卓APK(海外线路)⏬</a>】</p> -->
 <ul><li><b>防封</b>：如果域名被封无法访问，可通过App打开、查看最新网址；</li><li><b>最新</b>：最新热门VIP在线看与下载资源同步更新；</li><li><b>多源</b>：持续添加优质线路、视频源供您切换，画质清晰、播放流畅；</li><li><b>海量</b>：聚合全网资源，想看啥就看啥</li><li><b>下载</b>：聚合全网下载，持续完善资源库</li></ul>
@@ -71,27 +71,34 @@
 <p><a target="_blank" href="https://WaiPian3.com/?WaiPianXingQiu.com">https://WaiPian3.com</a><span speed="https://WaiPian8.com">测速中</span></p>
 
 
-<a href="#" target="_blank" style="z-index: 9999;" aria-label="歪片星球APP下载">
+<a href="app/wp-mobile-pad_v911_20250115.apk" target="_blank" style="z-index: 9999;" aria-label="歪片星球APP下载">
   <button class="d3"><img src="arrow-down.gif" width="20px"></button>
 </a>
-<a href="app/wp-mobile-pad_v910_20250108.apk" target="_blank" style="z-index: 9999;" aria-label="歪片星球APK下载">
+<a href="app/wp-mobile-pad_v911_20250115.apk" target="_blank" style="z-index: 9999;" aria-label="歪片星球APK下载">
   <button class="wpxq"><img src="wpxq-app.png" height="75x" title="歪片星球APK下载"></button>
-  <style>.wpxq {position: fixed;bottom: 0rem;left: 19.9rem;} .d3 {position: fixed;bottom: 0rem;left: 30rem;padding-bottom: 80px;}</style>
+  <style>.wpxq {position: fixed;bottom: 0rem;left: 26%;} .d3 {position: fixed;bottom: 0rem;left: 26%;padding-bottom: 80px;}</style>
 </a>
 
 
 <p>如果您认可 歪片星球 请分享给你的好友！</p>
 
 <br><br><br>
-<a href="https://t.me/WaiPianBOT" target="_blank" style="z-index: 9999;" aria-label="合作Telegram">
-  <button class="telegram-btn">合作Telegram</button>
-  <style>.telegram-btn {position: fixed;bottom: 0rem;left: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.telegram-btn svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.telegram-btn:hover svg{animation:telegram-wave 560ms ease-in-out;}@keyframes telegram-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.telegram-btn:hover svg{animation:none}.telegram-btn svg{animation:telegram-wave 560ms ease-in-out}}</style>
+<a href="https://t.me/Movie_Ranking" target="_blank" style="z-index: 9999;" aria-label="合作Telegram">
+  <button class="telegram-btn1"><i class="fa-brands fa-telegram fa-bounce" style="color: #74C0FC; display: flex; align-items: center; justify-content: center; height: 100%;"></i> Telegram分享群</button>
+  <style>.telegram-btn1 {position: fixed;bottom: 0rem;left: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.telegram-btn1 svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.telegram-btn1:hover svg{animation:telegram-wave 560ms ease-in-out;}@keyframes telegram-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.telegram-btn1:hover svg{animation:none}.telegram-btn1 svg{animation:telegram-wave 560ms ease-in-out}}</style>
 </a>
 
-<a href="https://discord.gg/wH7hPaVysj" target="_blank" style="z-index: 9999;" aria-label="Discord群">
-  <button class="discord-btn">Discord群</button>
-  <style>.discord-btn {position: fixed;bottom: 0rem;right: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.discord-btn svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.discord-btn:hover svg{animation:discord-wave 560ms ease-in-out;}@keyframes discord-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.discord-btn:hover svg{animation:none}.discord-btn svg{animation:discord-wave 560ms ease-in-out}}</style>
+<a href="https://discord.gg/9MkKdHZDW4" target="_blank" style="z-index: 9999;" aria-label="Discord群">
+  <button class="discord-btn"><i class="fa-brands fa-discord fa-beat-fade" style="color: #74C0FC; display: flex; align-items: center; justify-content: center; height: 100%;"></i> Discord群</button>
+  <style>.discord-btn {position: fixed;bottom: 0rem;left: 63%;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.discord-btn svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.discord-btn:hover svg{animation:discord-wave 560ms ease-in-out;}@keyframes discord-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.discord-btn:hover svg{animation:none}.discord-btn svg{animation:discord-wave 560ms ease-in-out}}</style>
 </a>
+
+
+<a href="https://t.me/WaiPianBOT" target="_blank" style="z-index: 9999;" aria-label="合作Telegram">
+  <button class="telegram-btn2"><i class="fa-brands fa-telegram fa-bounce" style="color: #74C0FC; display: flex; align-items: center; justify-content: center; height: 100%;"></i> 联系站长合作</button>
+  <style>.telegram-btn2 {position: fixed;bottom: 0rem;right: 0rem;background-color: #5865F2;padding: 1.5rem;height: auto;color: white;text-align: right;vertical-align: middle;border: none;font-size: 1.5rem;border-radius: 4px;}.telegram-btn2 svg {height: 1.5rem;position: absolute;top: 50%;left: 0;transform: translateY(-50%);}.telegram-btn2:hover svg{animation:telegram-wave 560ms ease-in-out;}@keyframes telegram-wave{0%,100%{transform:translateY(-50%) rotate(0)}20%,60%{transform:translateY(-50%) rotate(-25deg)}40%,80%{transform:translateY(-50%) rotate(10deg)}}@media (max-width:500px){.telegram-btn2:hover svg{animation:none}.telegram-btn2 svg{animation:telegram-wave 560ms ease-in-out}}</style>
+</a>
+
 
 <script>
   var ping = 1;
